--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "survey",
+  "name": "echo19-web-survey-server",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.266.1",
+    "express": "^4.16.3",
+    "graceful-fs": "^4.1.11",
     "mysql2": "^1.5.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^1.1.4",
     "sequelize": "^4.38.0",
-    "treeize": "^2.1.2"
+    "twilio": "^3.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +20,6 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx": "^0.0.2",
